Custom Wallpaper, File Structure changes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
 <body>
     <header>
-        <h1 id="header-logo-title">ToDO Title</h1>
+        <h1 id="header-logo-title">New Project</h1>
         <div class="settings-menu" id="settings-menu"> <img src="./res/hamburger.svg" alt="" srcset="" height="25px" width="25px" id="settings-menu-hamburger-image"></div>
     </header>
     <div id="settings-menu">
         <ul class="hidden" id="settings-menu-item-list">
-            <li class="settings-menu-item " id="settings-menu-item">custom background</li>
+            <li class="settings-menu-item " id="settings-menu-item">
+                <div id="">custom background<input type="text" name="" id="custom-background-input"></div>
+            </li>
             <li class="settings-menu-item " id="settings-menu-item-clear-data">Clear UserData</li>
         </ul>
     </div>
@@ -29,6 +31,9 @@
 
 
 </body>
+
 <script src="./todo.js"></script>
+<script src="./todo.settings.js"></script>
+
 
 </html>
